truncate spans; small padding fix for sidebar-stats

--- a/src/internal-packages/instance-header/styles/index.less
+++ b/src/internal-packages/instance-header/styles/index.less
@@ -44,7 +44,14 @@
   }
 
   &-icon-home {
-    padding: 0 10px;
+    width: 36px;
+  }
+
+  &-details {
+    display: flex;
+    flex: 1;
+    flex-basis: auto;
+    overflow: hidden;
   }
 
   &-hostname-prefix {
