--- a/src/internal-packages/sidebar/styles/sidebar-instance-properties.less
+++ b/src/internal-packages/sidebar/styles/sidebar-instance-properties.less
@@ -11,7 +11,7 @@
     font-weight: bold;
     font-size: 11px;
     line-height: 12px;
-    padding: 4px 0 6px;
+    padding: 6px 0 8px;
     text-transform: uppercase;
     display: flex;
     overflow: hidden;
